# WaveFinder

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
apps/web/: next.config.ts  package.json  vercel.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/chips/at-point/: route.ts
apps/web/src/app/api/chips/empty/: route.ts
apps/web/src/app/api/chips/random/: route.ts
apps/web/src/app/api/jobs/[id]/: route.ts
apps/web/src/app/api/labels/: route.ts
apps/web/src/app/api/pins/: route.ts
apps/web/src/app/api/scan/: route.ts
apps/web/src/app/api/seeds/: route.ts
apps/web/src/app/api/stats/: route.ts
apps/web/src/app/api/train/: route.ts
apps/web/src/app/label/empty/: page.tsx
apps/web/src/app/label/explore/: page.tsx
apps/web/src/app/label/review/: page.tsx
apps/web/src/app/train/: page.tsx
apps/web/src/components/Labeling/: ChipLabeler.tsx  LabelingStats.tsx
apps/web/src/components/Map/: ScanPanel.tsx  WaveMap.tsx
apps/web/src/lib/: db.ts  labeling.ts  ml-worker.ts
data/: sample-seeds.geojson
docs/: LABELING.md
scripts/: start.ts
services/ml/: pyproject.toml
services/ml/scripts/: import_seeds.py  refresh_placeholders.py
services/ml/wavefinder/: __init__.py  config.py  db.py  main.py
services/ml/wavefinder/geo/: __init__.py  chips.py  coastline.py
services/ml/wavefinder/inference/: __init__.py  predict.py
services/ml/wavefinder/jobs/: __init__.py  scan.py  train.py
services/ml/wavefinder/routes/: chips.py
services/ml/wavefinder/sentinel/: __init__.py  fetch.py
(+4 files in other folders)
